--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "todo-list",
+  "name": "todo-board-assignment",
+  "homepage": "https://yurismal.github.io/todo-board-assignment/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,12 +8,15 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@atlaskit/pragmatic-drag-and-drop": "^1.7.2",
     "@atlaskit/pragmatic-drag-and-drop-hitbox": "^1.1.0",
     "classnames": "^2.5.1",
+    "gh-pages": "^6.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
